# orphan

./: .gitignore  CMakeLists.txt  README.md  README.rst
app/: CMakeLists.txt  main.c  main.cpp
bindings/python/: cipher.py  homo_tensor.py
bindings/python/homo/: __main__.py  cipher.py  conv.py  encoder.py  homo_tensor.py  homockks_mult.py
cactuar/: CMakeLists.txt  block.cpp  target.cpp  template_helper.cpp
cmake/: LibUtils.cmake
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/sphinx/: CMakeLists.txt  conf.py.in  index.rst
docs/sphinx/_static/css/: dark.css  light.css  style.css
include/cactuar/: cactuar-block.h  cactuar-blockheader.h  cactuar-encoding.h  cactuar-keccak.h  cactuar-target.h  cactuar-template_helper.h
include/orphan/: _orphanconfig.h  orphan-bigint.h  orphan-crypto.h  orphan-hash.h  orphan-integral.h  orphan-keccak.h  orphan-serializer.h  orphan-signing.h  orphan-transaction.h  orphan.h
include/orphan/core/: orphan_core-integral.h
orphan/: CMakeLists.txt  bigint.cpp  blockheader.cpp  core_integral.cpp  hash.cpp  homo_tensor.py  homockks.py  homockks_2.py  homockks_3.py  homockks_add.py  homockks_mult.py  integral.cpp  keccak.c  keccak.cpp
